VS suppress another warning

--- a/VS/ACL/ACL.vcxproj
+++ b/VS/ACL/ACL.vcxproj
@@ -129,7 +129,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalIncludeDirectories>include</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812;33011</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -153,7 +153,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalIncludeDirectories>include</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812;33011</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -177,7 +177,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalIncludeDirectories>include</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812;33011</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -201,7 +201,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <AdditionalIncludeDirectories>include</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4201;4146;4100;4189;26812</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4201;4146;4100;4189;26812;33011</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>
