VS AGF add MouseTracker (and MouseClickTracker)

--- a/VS/AGF/AGF.vcxproj.filters
+++ b/VS/AGF/AGF.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\llgui_wintheme.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\helpers\mouse_tracker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\AGF\application.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\AGF\impl\llgui_gdiplus_txlib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\AGF\helpers\mouse_tracker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
