--- a/VS/Photoshoop/Photoshoop.vcxproj
+++ b/VS/Photoshoop/Photoshoop.vcxproj
@@ -202,6 +202,9 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\default.style" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
