--- a/VS/AGF/AGF.vcxproj
+++ b/VS/AGF/AGF.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\helpers\animation.cpp" />
     <ClCompile Include="src\application.cpp" />
     <ClCompile Include="src\events.cpp" />
     <ClCompile Include="src\helpers\mouse_tracker.cpp" />
@@ -36,6 +37,7 @@
     <ClCompile Include="src\widgets\window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\AGF\helpers\animation.h" />
     <ClInclude Include="include\AGF\application.h" />
     <ClInclude Include="include\AGF\events.dsl.h" />
     <ClInclude Include="include\AGF\events.h" />
