--- a/VS/AGF/AGF.vcxproj.filters
+++ b/VS/AGF/AGF.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\widgets\slider.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\helpers\animation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\AGF\application.h">
@@ -129,6 +132,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\AGF\widgets\slider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\AGF\helpers\animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
