--- a/VS/Photoshoop/Photoshoop.vcxproj
+++ b/VS/Photoshoop/Photoshoop.vcxproj
@@ -200,11 +200,13 @@
     <ClInclude Include="app.h" />
     <ClInclude Include="canvas.h" />
     <ClInclude Include="color_picker.h" />
+    <ClInclude Include="layer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="canvas.cpp" />
     <ClCompile Include="color_picker.cpp" />
+    <ClCompile Include="layer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\default.style" />
