--- a/VS/Photoshoop/Photoshoop.vcxproj
+++ b/VS/Photoshoop/Photoshoop.vcxproj
@@ -200,6 +200,14 @@
     <ClInclude Include="app.h" />
     <ClInclude Include="canvas.h" />
     <ClInclude Include="color_picker.h" />
+    <ClInclude Include="physics\borders.h" />
+    <ClInclude Include="physics\components\chemistry.h" />
+    <ClInclude Include="physics\components\component.h" />
+    <ClInclude Include="physics\components\physics.h" />
+    <ClInclude Include="physics\components\render.h" />
+    <ClInclude Include="physics\manager.h" />
+    <ClInclude Include="physics\molecule.h" />
+    <ClInclude Include="physics\widget.h" />
     <ClInclude Include="tools\brush.h" />
     <ClInclude Include="tool.h" />
     <ClInclude Include="tools\eraser.h" />
@@ -211,6 +219,14 @@
     <ClCompile Include="app.cpp" />
     <ClCompile Include="canvas.cpp" />
     <ClCompile Include="color_picker.cpp" />
+    <ClCompile Include="physics\borders.cpp" />
+    <ClCompile Include="physics\components\chemistry.cpp" />
+    <ClCompile Include="physics\components\component.cpp" />
+    <ClCompile Include="physics\components\physics.cpp" />
+    <ClCompile Include="physics\components\render.cpp" />
+    <ClCompile Include="physics\manager.cpp" />
+    <ClCompile Include="physics\molecule.cpp" />
+    <ClCompile Include="physics\widget.cpp" />
     <ClCompile Include="tools\brush.cpp" />
     <ClCompile Include="tool.cpp" />
     <ClCompile Include="tools\eraser.cpp" />
