--- a/VS/AGF/AGF.vcxproj
+++ b/VS/AGF/AGF.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="src\application.cpp" />
     <ClCompile Include="src\events.cpp" />
     <ClCompile Include="src\helpers\mouse_tracker.cpp" />
+    <ClCompile Include="src\widgets\layout.cpp" />
     <ClCompile Include="src\llgui_gdiplus_txlib.cpp" />
     <ClCompile Include="src\llgui_txlib.cpp" />
     <ClCompile Include="src\llgui_wintheme.cpp" />
@@ -45,6 +46,7 @@
     <ClInclude Include="include\AGF\impl\llgui_gdiplus_txlib.h" />
     <ClInclude Include="include\AGF\impl\llgui_txlib.h" />
     <ClInclude Include="include\AGF\impl\llgui_wintheme.h" />
+    <ClInclude Include="include\AGF\widgets\layout.h" />
     <ClInclude Include="include\AGF\llgui.h" />
     <ClInclude Include="include\AGF\llgui_pre.h" />
     <ClInclude Include="include\AGF\mouse.h" />
