--- a/VS/AGF/AGF.vcxproj
+++ b/VS/AGF/AGF.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="src\application.cpp" />
     <ClCompile Include="src\events.cpp" />
     <ClCompile Include="src\helpers\mouse_tracker.cpp" />
+    <ClCompile Include="src\helpers\wiget_ref.cpp" />
     <ClCompile Include="src\widgets\layout.cpp" />
     <ClCompile Include="src\llgui_gdiplus_txlib.cpp" />
     <ClCompile Include="src\llgui_txlib.cpp" />
@@ -43,6 +44,7 @@
     <ClInclude Include="include\AGF\events.dsl.h" />
     <ClInclude Include="include\AGF\events.h" />
     <ClInclude Include="include\AGF\helpers\mouse_tracker.h" />
+    <ClInclude Include="include\AGF\helpers\widget_ref.h" />
     <ClInclude Include="include\AGF\impl\llgui_gdiplus_txlib.h" />
     <ClInclude Include="include\AGF\impl\llgui_txlib.h" />
     <ClInclude Include="include\AGF\impl\llgui_wintheme.h" />
