--- a/VS/Photoshoop/Photoshoop.vcxproj.filters
+++ b/VS/Photoshoop/Photoshoop.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="physics\widget.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="spline.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="app.cpp">
@@ -117,6 +120,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="physics\widget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="spline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
