--- a/VS/Photoshoop/Photoshoop.vcxproj
+++ b/VS/Photoshoop/Photoshoop.vcxproj
@@ -199,7 +199,7 @@
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="canvas.h" />
-    <ClInclude Include="color_picker.h" />
+    <ClInclude Include="tools_widget.h" />
     <ClInclude Include="physics\borders.h" />
     <ClInclude Include="physics\components\chemistry.h" />
     <ClInclude Include="physics\components\component.h" />
@@ -219,7 +219,7 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="canvas.cpp" />
-    <ClCompile Include="color_picker.cpp" />
+    <ClCompile Include="tools_widget.cpp" />
     <ClCompile Include="physics\borders.cpp" />
     <ClCompile Include="physics\components\chemistry.cpp" />
     <ClCompile Include="physics\components\component.cpp" />
