--- a/VS/Photoshoop/Photoshoop.vcxproj.filters
+++ b/VS/Photoshoop/Photoshoop.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="spline.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="donut.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="tools\invert_eff.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -126,6 +129,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="spline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="donut.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="tools\invert_eff.cpp">
