--- a/VS/AGF/AGF.vcxproj
+++ b/VS/AGF/AGF.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="src\widgets\group.cpp" />
     <ClCompile Include="src\widgets\label.cpp" />
     <ClCompile Include="src\widgets\rectangle.cpp" />
+    <ClCompile Include="src\widgets\scrollbar.cpp" />
     <ClCompile Include="src\widgets\slider.cpp" />
     <ClCompile Include="src\widgets\window.cpp" />
   </ItemGroup>
@@ -59,6 +60,7 @@
     <ClInclude Include="include\AGF\widgets\group.h" />
     <ClInclude Include="include\AGF\widgets\label.h" />
     <ClInclude Include="include\AGF\widgets\rectangle.h" />
+    <ClInclude Include="include\AGF\widgets\scrollbar.h" />
     <ClInclude Include="include\AGF\widgets\slider.h" />
     <ClInclude Include="include\AGF\widgets\static_group.h" />
     <ClInclude Include="include\AGF\widgets\window.h" />
