--- a/VS/Photoshoop/Photoshoop.vcxproj.filters
+++ b/VS/Photoshoop/Photoshoop.vcxproj.filters
@@ -75,6 +75,21 @@
     <ClInclude Include="tools\invert_eff.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="plugin\loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="plugin\impl\loader_v1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="plugin\impl\loader_v2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="plugin\impl\v1\plugin_std.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="plugin\impl\plugin_tool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="app.cpp">
@@ -135,6 +150,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="tools\invert_eff.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="plugin\impl\loader_v1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="plugin\impl\loader_v2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="plugin\impl\plugin_tool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
