--- a/VS/Photoshoop/Photoshoop.vcxproj
+++ b/VS/Photoshoop/Photoshoop.vcxproj
@@ -204,6 +204,7 @@
     <ClInclude Include="plugin\impl\plugin_tool.h" />
     <ClInclude Include="plugin\impl\v1\plugin_std.hpp" />
     <ClInclude Include="plugin\loader.h" />
+    <ClInclude Include="tools\spline_eff.h" />
     <ClInclude Include="tools_widget.h" />
     <ClInclude Include="donut.h" />
     <ClInclude Include="physics\borders.h" />
@@ -229,6 +230,7 @@
     <ClCompile Include="plugin\impl\loader_v1.cpp" />
     <ClCompile Include="plugin\impl\loader_v2.cpp" />
     <ClCompile Include="plugin\impl\plugin_tool.cpp" />
+    <ClCompile Include="tools\spline_eff.cpp" />
     <ClCompile Include="tools_widget.cpp" />
     <ClCompile Include="donut.cpp" />
     <ClCompile Include="physics\borders.cpp" />
