--- a/VS/AGF/AGF.vcxproj.filters
+++ b/VS/AGF/AGF.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="src\widgets\icon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\widgets\textbox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\AGF\application.h">
